--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </head>
 <body>
 <div id="wrapper">
-
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
@@ -58,19 +57,22 @@
     <!-- /Sidebar-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Toggle Menu</a>
+        <div class="row">
+            <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Toggle Menu</a>
+        </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Simple Sidebar</h1>
-                    <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller
-                        screens, and will appear non-collapsed on larger screens. When toggled using the button below,
-                        the menu will appear/disappear. On small screens, the page content will be pushed off
-                        canvas.</p>
-                    <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-
-                </div>
+                <div class="col-lg-6">UN ELEMENT</div>
+                <div class="col-lg-3">UN SOUS ELEMENT</div>
+                <div class="col-lg-3">UN SOUS ELEMENT</div>
             </div>
+            <div class="row">
+                <div class="col-lg-3">UN SOUS ELEMENT</div>
+                <div class="col-lg-3">UN SOUS ELEMENT</div>
+                <div class="col-lg-6">UN ELEMENT</div>
+            </div>
+
+
         </div>
     </div>
     <!-- /#page-content-wrapper -->
