--- a/index.html
+++ b/index.html
@@ -26,56 +26,56 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <li class="sidebar-brand">
-                <a href="#">
-                    Start Bootstrap
-                </a>
+            <li>
+                <a href="#">Accueil</a>
             </li>
             <li>
-                <a href="#">Dashboard</a>
-            </li>
-            <li>
-                <a href="#">Shortcuts</a>
-            </li>
-            <li>
-                <a href="#">Overview</a>
-            </li>
-            <li>
-                <a href="#">Events</a>
-            </li>
-            <li>
-                <a href="#">About</a>
+                <a href="#">SpectaShop</a>
             </li>
             <li>
                 <a href="#">Services</a>
             </li>
             <li>
+                <a href="#">Nos Valeurs</a>
+            </li>
+            <li>
                 <a href="#">Contact</a>
             </li>
+            <li>
+                <a href="#">Se Connecter</a>
+            </li>
+
         </ul>
     </div>
     <!-- /Sidebar-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <div class="row">
-            <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Toggle Menu</a>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">UN ELEMENT</div>
-                <div class="col-lg-3">UN SOUS ELEMENT</div>
-                <div class="col-lg-3">UN SOUS ELEMENT</div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3">UN SOUS ELEMENT</div>
-                <div class="col-lg-3">UN SOUS ELEMENT</div>
-                <div class="col-lg-6">UN ELEMENT</div>
-            </div>
-
-
-        </div>
+        <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Menu</a>
     </div>
-    <!-- /#page-content-wrapper -->
+    <div class="container">
+
+        <div class="row">
+            <h1 class="text-center"><a href="index.php" class="logo"></a></h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 box large">
+                <img src="http://placehold.it/400x400">
+
+
+            </div>
+            <div class="col-lg-3 box small">UN SOUS ELEMENT</div>
+            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
+            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
+            <div class="col-lg-6 box">UN ELEMENT</div>
+        </div>
+
+
+    </div>
+</div>
+<!-- /#page-content-wrapper -->
 
 
 </div>
