Menu latérale presque OK reste à fixer le mode fermé (toggled) par default. Séparation header / content à faire (include php).

--- a/index.html
+++ b/index.html
@@ -49,22 +49,29 @@
     </div>
     <!-- /Sidebar-->
     <!-- Page Content -->
+
     <div id="page-content-wrapper">
         <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Menu</a>
     </div>
     <div class="container">
-
+        <!--BIG TITLE-->
         <div class="row">
             <h1 class="text-center"><a href="index.php" class="logo"></a></h1>
         </div>
+        <!-- FIN BIG TITLE-->
         <div class="row">
+            <!--LARGE BOX-->
             <div class="col-lg-6 box large">
-                <img src="http://placehold.it/400x400">
-
-
+                <!--<img src="http://placehold.it/400x400">-->
+                <img class="img-responsive" src="asset/image01.jpg">
+                <h2 class="box_title text-center">Catégorie</h2>
+                <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
             </div>
+            <!--FIN LARGE BOX-->
+            <!-- SMALL BOX-->
             <div class="col-lg-3 box small">UN SOUS ELEMENT</div>
-            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
+            <!-- FIN SMALL BOX-->
+            <div class="col-lg-3 box small">UN SOUS ELEMENT</div>
         </div>
         <div class="row">
             <div class="col-lg-3 box">UN SOUS ELEMENT</div>
