--- a/index.html
+++ b/index.html
@@ -61,22 +61,60 @@
         <!-- FIN BIG TITLE-->
         <div class="row">
             <!--LARGE BOX-->
-            <div class="col-lg-6 box large">
-                <!--<img src="http://placehold.it/400x400">-->
+            <div class="col-lg-6 col-sm-12 box large">
+
                 <img class="img-responsive" src="asset/image01.jpg">
                 <h2 class="box_title text-center">Catégorie</h2>
                 <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
             </div>
             <!--FIN LARGE BOX-->
             <!-- SMALL BOX-->
-            <div class="col-lg-3 box small">UN SOUS ELEMENT</div>
+            <div class="col-lg-3 col-sm-6 box small">
+                <img class="img-responsive" src="asset/image02.jpg">
+                <div class="blank_bg">
+                    <h2 class="box_title text-center">Catégorie</h2>
+                    <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
+                </div>
+            </div>
             <!-- FIN SMALL BOX-->
-            <div class="col-lg-3 box small">UN SOUS ELEMENT</div>
+            <!-- SMALL BOX-->
+            <div class="col-lg-3 col-sm-6 box small">
+                <img class="img-responsive" src="asset/image02.jpg">
+                <div class="blank_bg">
+                    <h2 class="box_title text-center">Catégorie</h2>
+                    <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
+                </div>
+            </div>
+            <!-- FIN SMALL BOX-->
         </div>
         <div class="row">
-            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
-            <div class="col-lg-3 box">UN SOUS ELEMENT</div>
-            <div class="col-lg-6 box">UN ELEMENT</div>
+
+            <!-- SMALL BOX-->
+            <div class="col-lg-3 col-sm-6 box small">
+                <img class="img-responsive" src="asset/image02.jpg">
+                <div class="blank_bg">
+                    <h2 class="box_title text-center">Catégorie</h2>
+                    <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
+                </div>
+            </div>
+            <!-- FIN SMALL BOX-->
+            <!-- SMALL BOX-->
+            <div class="col-lg-3 col-sm-6 box small">
+                <img class="img-responsive" src="asset/image02.jpg">
+                <div class="blank_bg">
+                    <h2 class="box_title text-center">Catégorie</h2>
+                    <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
+                </div>
+            </div>
+            <!-- FIN SMALL BOX-->
+            <!--LARGE BOX-->
+            <div class="col-lg-6 col-sm-12 box large">
+
+                <img class="img-responsive" src="asset/image01.jpg">
+                <h2 class="box_title text-center">Catégorie</h2>
+                <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
+            </div>
+            <!--FIN LARGE BOX-->
         </div>
 
 
