Menu latérale presque OK reste à fixer le mode fermé (toggled) par default. Séparation header / content à faire (include php).

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- FIN BIG TITLE-->
         <div class="row">
             <!--LARGE BOX-->
-            <div class="col-lg-6 col-sm-12 box large">
+            <div class="col-lg-6 col-sm-12 box large_box">
 
                 <img class="img-responsive" src="asset/image01.jpg">
                 <h2 class="box_title text-center">Catégorie</h2>
@@ -69,7 +69,7 @@
             </div>
             <!--FIN LARGE BOX-->
             <!-- SMALL BOX-->
-            <div class="col-lg-3 col-sm-6 box small">
+            <div class="col-lg-3 col-sm-6 box small_box">
                 <img class="img-responsive" src="asset/image02.jpg">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
@@ -78,7 +78,7 @@
             </div>
             <!-- FIN SMALL BOX-->
             <!-- SMALL BOX-->
-            <div class="col-lg-3 col-sm-6 box small">
+            <div class="col-lg-3 col-sm-6 box small_box">
                 <img class="img-responsive" src="asset/image02.jpg">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
@@ -90,7 +90,7 @@
         <div class="row">
 
             <!-- SMALL BOX-->
-            <div class="col-lg-3 col-sm-6 box small">
+            <div class="col-lg-3 col-sm-6 box small_box">
                 <img class="img-responsive" src="asset/image02.jpg">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
@@ -99,7 +99,7 @@
             </div>
             <!-- FIN SMALL BOX-->
             <!-- SMALL BOX-->
-            <div class="col-lg-3 col-sm-6 box small">
+            <div class="col-lg-3 col-sm-6 box small_box">
                 <img class="img-responsive" src="asset/image02.jpg">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
@@ -108,7 +108,7 @@
             </div>
             <!-- FIN SMALL BOX-->
             <!--LARGE BOX-->
-            <div class="col-lg-6 col-sm-12 box large">
+            <div class="col-lg-6 col-sm-12 box large_box">
 
                 <img class="img-responsive" src="asset/image01.jpg">
                 <h2 class="box_title text-center">Catégorie</h2>
