--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="fr"> <![endif]-->
 <!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<html class="no-js lt-ie9 lt-ie8" lang="fr"> <![endif]-->
 <!--[if IE 8]>
-<html class="no-js lt-ie9" lang=""> <![endif]-->
+<html class="no-js lt-ie9" lang="fr"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js" lang=""> <!--<![endif]-->
+<html class="no-js" lang="fr"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -22,7 +22,7 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
-<div id="wrapper">
+<div id="wrapper" class="toggled">
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
@@ -51,7 +51,7 @@
     <!-- Page Content -->
 
     <div id="page-content-wrapper">
-        <a href="#menu-toggle" class="btn btn-default pull-right" id="menu-toggle">Menu</a>
+        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
     </div>
     <div class="container">
         <!--BIG TITLE-->
