--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
     <!-- Page Content -->
 
     <div id="page-content-wrapper">
-        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
+
+        <a href="#menu-toggle" id="menu-toggle">
+            <span>Menu</span>
+            <button type="button" class="navbar-toggle collapsed" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </a>
     </div>
     <div class="container">
         <!--BIG TITLE-->
