--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <!--LARGE BOX-->
             <div class="col-lg-6 col-sm-12 box large_box">
 
-                <img class="img-responsive" src="asset/image01.jpg">
+                <img class="img-responsive" src=" http://placehold.it/400x400">
                 <h2 class="box_title text-center">Catégorie</h2>
                 <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
             </div>
             <!--FIN LARGE BOX-->
             <!-- SMALL BOX-->
             <div class="col-lg-3 col-sm-6 box small_box">
-                <img class="img-responsive" src="asset/image02.jpg">
+                <img class="img-responsive" src=" http://placehold.it/350x150">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
                     <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
@@ -88,7 +88,7 @@
             <!-- FIN SMALL BOX-->
             <!-- SMALL BOX-->
             <div class="col-lg-3 col-sm-6 box small_box">
-                <img class="img-responsive" src="asset/image02.jpg">
+                <img class="img-responsive" src=" http://placehold.it/350x150">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
                     <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
@@ -100,7 +100,7 @@
 
             <!-- SMALL BOX-->
             <div class="col-lg-3 col-sm-6 box small_box">
-                <img class="img-responsive" src="asset/image02.jpg">
+                <img class="img-responsive" src=" http://placehold.it/500x500">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
                     <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
@@ -109,7 +109,7 @@
             <!-- FIN SMALL BOX-->
             <!-- SMALL BOX-->
             <div class="col-lg-3 col-sm-6 box small_box">
-                <img class="img-responsive" src="asset/image02.jpg">
+                <img class="img-responsive" src=" http://placehold.it/350x150">
                 <div class="blank_bg">
                     <h2 class="box_title text-center">Catégorie</h2>
                     <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
@@ -119,7 +119,7 @@
             <!--LARGE BOX-->
             <div class="col-lg-6 col-sm-12 box large_box">
 
-                <img class="img-responsive" src="asset/image01.jpg">
+                <img class="img-responsive" src=" http://placehold.it/500x500">
                 <h2 class="box_title text-center">Catégorie</h2>
                 <p class="box_text text-center">Vellem pudor decebat patiebatur quod.</p>
             </div>
