--- a/post.html
+++ b/post.html
@@ -33,12 +33,13 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
-<p>test</p>
 <div id="wrapper" class="toggled">
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
-
+            <li>
+                <a href="#">Accueil</a>
+            </li>
             <li>
                 <a href="#">SpectaShop</a>
             </li>
@@ -72,6 +73,7 @@
             </button>
         </a>
     </div>
+
 
     <div class="container hidden-xs">
         <!--BIG TITLE-->
