--- a/myaccount.html
+++ b/myaccount.html
@@ -62,30 +62,34 @@
     <!-- /Sidebar-->
     <!-- Page Content -->
     <div class="container">
-    	<div class="row" id="tuile">
-		  	<div class="col-xs-6 col-md-3">
-			    <a href="#" class="thumbnail">
-			    	<img src="http://placehold.it/500x400" onclick="info();">
+    	<div class="row">
+		  	<div class="col-xs-6 col-md-3" id="tuileperso" onclick="changeSize()">
+			    <a href="#" class="thumbnail" id="tuile1" style="height: 15em; text-align: center;">
+			    	<span class="glyphicon glyphicon-user" aria-hidden="true" style="margin-top: 5em;"></span>
+			    	<h4>Mes informations personnelles</h4>
 			    </a>
 		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-			    <a href="#" class="thumbnail">
-			    	<img src="http://placehold.it/500x400">
+		  	<div class="col-xs-6 col-md-3" id="tuileperso" onclick="changeSize()">
+			    <a href="#" class="thumbnail" id="tuile1" style="height: 15em; text-align: center;">
+			    	<span class="glyphicon glyphicon-stats" aria-hidden="true" style="margin-top: 5em;"></span>
+			    	<h4>Customer Service</h4>
 			    </a>
 		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-			    <a href="#" class="thumbnail">
-			    	<img src="http://placehold.it/500x400">
+		  	<div class="col-xs-6 col-md-3" id="tuileperso" onclick="changeSize()">
+			    <a href="#" class="thumbnail" id="tuile1" style="height: 15em; text-align: center;">
+			    	<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true" style="margin-top: 5em;"></span>
+			    	<h4>Historique de commande</h4>
 			    </a>
 		  	</div>
-		  	<div class="col-xs-6 col-md-3">
-			    <a href="#" class="thumbnail">
-			    	<img src="http://placehold.it/500x400">
+		  	<div class="col-xs-6 col-md-3" id="tuileperso" onclick="changeSize()">
+			    <a href="#" class="thumbnail" id="tuile1" style="height: 15em; text-align: center;">
+			    	<span class="glyphicon glyphicon-envelope" aria-hidden="true" style="margin-top: 5em;"></span>
+			    	<h4>Contact</h4>
 			    </a>
 		  	</div>
 		</div>
 
-		<div class="row" id="content1">
+		<div class="row" id="contentinfoperso" >
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
 				<div class="list-group-item">
@@ -115,18 +119,19 @@
 			<div class="col-md-3"></div>
 		</div>
 
-		<div class="row" id="content2">
+		<div class="row" id="contentcustomer" >
 			<div class="jumbotron">
 			  <h1>Customer Services</h1>
 			  <p>Bienvenu sur votre nouvelle fonctionnalité, « Customer Service » ! Cette dernière vous offre un espace spécifique, dans le cadre de l’univers de la garantie, pour surveiller et manager votre matériel !</p>
-			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 			</div>
 
 			<div class="col-lg-4">
 				<h3 style="font-weight: bold;">Mon matériel :</h3>
 				<img src="http://placehold.it/200x200">
-				<p>Spectalizer III</p>
+				<p>Nom : Spectalizer III</p>
 				<p>Puissance : 400W</p>
+				<p>Rapport signal bruit : 100 dB</p>
+				<p>Réponse en fréquence : de 20 à 20 000Hz</p>
 			</div>
 
 
@@ -187,12 +192,19 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
-<script>
-
+<script type="text/javascript">
+	$(document).ready(function() {
+		$(".thumbnail").on("click", function(){
+			$(".thumbnail").animate({
+				width: "15em",
+				height: "10em",
+				duration: 0.25
+			});
+			$().css("visibility:", "");
+		});
+	})
 </script>
 </body>
 </html>
